--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <!-- Content injected by script.js after initialization -->
                 </div>
 
-                <!-- Quote Calculator Form (Interactive Section) -->
+                <!-- Quote Calculator Form -->
                 <div class="mt-8 pt-6 border-t border-gray-200">
                     <h3 class="text-2xl font-bold mb-4 text-gray-800">Instant Quote Estimator</h3>
                     <div class="flex flex-col sm:flex-row gap-4 items-end">
